// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders WithCheckbox without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__label rcx-label"
        >
          Example Checkbox
          <span
            class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
          >
            <span
              hidden=""
            >
              with extra info in a tooltip
            </span>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
              title="with extra info in a tooltip"
            >
              
            </i>
          </span>
          <span
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
          >
            *
          </span>
        </span>
        <label
          class="rcx-box rcx-box--full rcx-check-box"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            Example Checkbox with extra info in a tooltip  *
          </div>
          <input
            aria-describedby="react-aria-:rf:-description react-aria-:rf:-error react-aria-:rf:-hint"
            aria-invalid="true"
            class="rcx-box rcx-box--full rcx-check-box__input"
            id="react-aria-:rf:-label"
            type="checkbox"
          />
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-check-box__fake"
          />
        </label>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:rf:-description"
      >
        You can select multiple options
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:rf:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:rf:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithEmailInput without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label"
        for="react-aria-:r3:-label"
      >
        Example Email Input
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
          >
            with extra info in a tooltip
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="with extra info in a tooltip"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:r3:-description"
      >
        This field requires a valid email address
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <input
          aria-describedby="react-aria-:r3:-description react-aria-:r3:-error react-aria-:r3:-hint"
          aria-invalid="true"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-email rcx-input-box"
          id="react-aria-:r3:-label"
          size="1"
          type="email"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:r3:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:r3:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithNumberInput without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label"
        for="react-aria-:rj:-label"
      >
        Example Number Input
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
          >
            with extra info in a tooltip
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="with extra info in a tooltip"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:rj:-description"
      >
        This field requires a valid number
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <input
          aria-describedby="react-aria-:rj:-description react-aria-:rj:-error react-aria-:rj:-hint"
          aria-invalid="true"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
          id="react-aria-:rj:-label"
          size="1"
          type="number"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:rj:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:rj:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithPasswordInput without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label"
        for="react-aria-:r5:-label"
      >
        Example Password Input
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
          >
            with extra info in a tooltip
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="with extra info in a tooltip"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:r5:-description"
      >
        This field requires a valid password
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <label
          class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
        >
          <input
            aria-describedby="react-aria-:r5:-description react-aria-:r5:-error react-aria-:r5:-hint"
            aria-invalid="true"
            class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-password rcx-input-box"
            id="react-aria-:r5:-label"
            size="1"
            type="password"
          />
          <span
            class="rcx-box rcx-box--full rcx-input-box__addon"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-eye-off rcx-icon rcx-css-1bepdyv"
            >
              
            </i>
          </span>
        </label>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:r5:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:r5:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithRadioButton without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__label rcx-label"
        >
          Example Radio Button
          <span
            class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
          >
            <span
              hidden=""
            >
              with extra info in a tooltip
            </span>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
              title="with extra info in a tooltip"
            >
              
            </i>
          </span>
          <span
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
          >
            *
          </span>
        </span>
        <label
          class="rcx-box rcx-box--full rcx-radio-button"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            Example Radio Button with extra info in a tooltip  *
          </div>
          <input
            aria-describedby="react-aria-:rb:-description react-aria-:rb:-error react-aria-:rb:-hint"
            aria-invalid="true"
            class="rcx-box rcx-box--full rcx-radio-button__input"
            id="react-aria-:rb:-label"
            type="radio"
          />
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-radio-button__fake"
          />
        </label>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:rb:-description"
      >
        You can only select a single option
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:rb:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:rb:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithSearchInput without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label"
        for="react-aria-:r7:-label"
      >
        Example Search Input
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
          >
            with extra info in a tooltip
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="with extra info in a tooltip"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:r7:-description"
      >
        You can use this field to search for things
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <input
          aria-describedby="react-aria-:r7:-description react-aria-:r7:-error react-aria-:r7:-hint"
          aria-invalid="true"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-search rcx-input-box"
          id="react-aria-:r7:-label"
          size="1"
          type="search"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:r7:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:r7:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithTelephoneInput without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label"
        for="react-aria-:rh:-label"
      >
        Example Telephone Input
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
          >
            with extra info in a tooltip
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="with extra info in a tooltip"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:rh:-description"
      >
        This field requires a valid telephone number
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <input
          aria-describedby="react-aria-:rh:-description react-aria-:rh:-error react-aria-:rh:-hint"
          aria-invalid="true"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-tel rcx-input-box"
          id="react-aria-:rh:-label"
          size="1"
          type="tel"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:rh:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:rh:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithTextArea without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label"
        for="react-aria-:r9:-label"
      >
        Example Text Area
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
          >
            with extra info in a tooltip
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="with extra info in a tooltip"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:r9:-description"
      >
        You can use this field to enter multi-line text
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <textarea
          aria-describedby="react-aria-:r9:-description react-aria-:r9:-error react-aria-:r9:-hint"
          aria-invalid="true"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-textarea rcx-input-box"
          cols="1"
          id="react-aria-:r9:-label"
          size="1"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:r9:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:r9:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithTextInput without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label"
        for="react-aria-:r1:-label"
      >
        Example Text Input
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
          >
            with extra info in a tooltip
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="with extra info in a tooltip"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:r1:-description"
      >
        Text inputs are used to enter a single line of text.
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <input
          aria-describedby="react-aria-:r1:-description react-aria-:r1:-error react-aria-:r1:-hint"
          aria-invalid="true"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
          id="react-aria-:r1:-label"
          size="1"
          type="text"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:r1:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:r1:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithToggleSwitch without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__label rcx-label"
        >
          Example Toggle Switch
          <span
            class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
          >
            <span
              hidden=""
            >
              with extra info in a tooltip
            </span>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
              title="with extra info in a tooltip"
            >
              
            </i>
          </span>
          <span
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
          >
            *
          </span>
        </span>
        <label
          class="rcx-box rcx-box--full rcx-toggle-switch"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            Example Toggle Switch with extra info in a tooltip  *
          </div>
          <input
            aria-describedby="react-aria-:rd:-description react-aria-:rd:-error react-aria-:rd:-hint"
            aria-invalid="true"
            class="rcx-box rcx-box--full rcx-toggle-switch__input"
            id="react-aria-:rd:-label"
            type="checkbox"
          />
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
          />
        </label>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:rd:-description"
      >
        This field represents a boolean value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:rd:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:rd:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders WithUrlInput without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label"
        for="react-aria-:rl:-label"
      >
        Example URL Input
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
          >
            with extra info in a tooltip
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="with extra info in a tooltip"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description"
        id="react-aria-:rl:-description"
      >
        This field requires a valid URL
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <input
          aria-describedby="react-aria-:rl:-description react-aria-:rl:-error react-aria-:rl:-hint"
          aria-invalid="true"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-url rcx-input-box"
          id="react-aria-:rl:-label"
          size="1"
          type="url"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error"
        id="react-aria-:rl:-error"
      >
        You failed to enter a valid value
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint"
          id="react-aria-:rl:-hint"
        >
          This should help the user enter a valid value
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link"
          href="#"
          target="_blank"
        >
          Link to more information
        </a>
      </span>
    </div>
  </div>
</body>
`;
